Fixed extra spacing in html

--- a/css/screen.css
+++ b/css/screen.css
@@ -20,9 +20,7 @@ h2{
     line-height: 1em;
     color: #5C5A6D;
   }
-body{
-    background-color: #2D3945;
-}
+
 #submit{
     display: flex;
     justify-content: center;
@@ -32,6 +30,9 @@ body{
     
 }
 /*Mobile*/
+body{
+    background-color: #EAE9E5;
+}
 label{
     display: block;
 
@@ -57,6 +58,9 @@ input{
 
 /*Desktop*/
 @media screen and (min-width: 760px){
+    body{
+        background-color: #2D3945;
+    }
     label{
         display: block;
         text-align: left;
